// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correct form for failed state for resetting password 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
  width: 100%;
}

.c4 a {
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c8:hover,
.c8:focus {
  background: #B29DFF;
}

.c8:active {
  background: #C5B6FF;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c7 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c7:hover,
.c7:focus,
.c7:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c7::-ms-clear {
  display: none;
}

.c7::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c7:read-only {
  cursor: not-allowed;
}

.c7:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="text.main"
  >
    Create a New Password
  </div>
  <div
    class="c2"
    color="text.slightlyMuted"
  >
    Step 2 of 3
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      kind="danger"
      width="100%"
    >
      failed to reset password
    </div>
    <div
      class="c5"
    >
      <label
        class="c6"
        font-size="0"
      >
        New Password
        <input
          autocomplete="off"
          class="c7"
          inputmode="text"
          placeholder="Password"
          type="password"
          value=""
        />
      </label>
    </div>
    <div
      class="c5"
    >
      <label
        class="c6"
        font-size="0"
      >
        Confirm New Password
        <input
          autocomplete="off"
          class="c7"
          inputmode="text"
          placeholder="Confirm Password"
          type="password"
          value=""
        />
      </label>
    </div>
    <button
      class="c8"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;

exports[`render correct form for resetting password 1`] = `
.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c7:hover,
.c7:focus {
  background: #B29DFF;
}

.c7:active {
  background: #C5B6FF;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c6 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c6:hover,
.c6:focus,
.c6:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c6::-ms-clear {
  display: none;
}

.c6::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c6:read-only {
  cursor: not-allowed;
}

.c6:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c5 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="text.main"
  >
    Create a New Password
  </div>
  <div
    class="c2"
    color="text.slightlyMuted"
  >
    Step 2 of 3
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <label
        class="c5"
        font-size="0"
      >
        New Password
        <input
          autocomplete="off"
          class="c6"
          inputmode="text"
          placeholder="Password"
          type="password"
          value=""
        />
      </label>
    </div>
    <div
      class="c4"
    >
      <label
        class="c5"
        font-size="0"
      >
        Confirm New Password
        <input
          autocomplete="off"
          class="c6"
          inputmode="text"
          placeholder="Confirm Password"
          type="password"
          value=""
        />
      </label>
    </div>
    <button
      class="c7"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;
